# p0

./: .gitignore  README.md  calibrate_controller.py  camera_detect.py  debug_arm.py  debug_controller.py  debug_gamepad.py  debug_hid_xbox.py  debug_pygame.py  find_stick_bytes.py  gamepad_pygame.py  gamepad_teleop.py  joint_swee.py  keyboard_control.py  main.py  prm_planner.py  pyproject.toml  reprogram_motor.py  rerun_render.py  simple_gamepad.py  test_controller_only.py  test_move.py  test_raw.py
examples/arm_visualization/: Cargo.toml
examples/imu_webcam_to_so100/: README.md  hand_udp_sender.py  robot_udp_bridge.py
examples/imu_webcam_to_so100/rust/: Cargo.toml
examples/imu_webcam_to_so100/rust/src/: main.rs
examples/placo_movement/: kinematics.py  main.py  planner_interface.py  rerun_render.py
examples/robot_arm_demo/: QUICKSTART.md  README.md  collisions.json  lerobot_control.py  load_external_urdf.py  main.py  run.sh  test_robot_arm.py
examples/simulation/: sim.py
examples/webcam_to_so100_EE/: firmware_code.py  imu_reader.py  simulate_webcam.py  teleoperate.py  visualize_webcam.py  webcam_leader.py
planner/: joint_space_planner.py
rendering/: rerun_pretty.py  rerun_render.py
rerun_arm/: collisions.json  config.json  roadmap.json  robot.urdf
rerun_arm/assets/: base.stl  distal_arm.stl  jaw.stl  jaw_base.stl  part_3.stl  part_3__2.stl  part_4.stl  part_5.stl  proximal_arm.stl  sts3215_03a__2.stl  wrist_arm.stl
src/: kinematics.py  main.py
src/planner/: joint_space_planner.py  prm_planner.py  (+1 more)
utility/: data_analyitics.py  workspace_finder.py
(+3 files in other folders)
