[package]
name = "lerobot_teleop_fuser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = "0.27"
nalgebra = { version = "0.32" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
ctrlc = "3"
